--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ set(wxWidgets_ROOT_DIR $ENV{WXWIN})
 set(wxWidgets_LIB_DIR $ENV{WXWIN}/lib/gcc_lib)
 set(wxWidgets_CONFIGURATION mswud)
 
-add_executable(${PROJECT_NAME} ${SOURCE})
+add_executable(${PROJECT_NAME} WIN32 ${SOURCE})
 find_package(wxWidgets COMPONENTS net core base)
 if(wxWidgets_FOUND)
   include(${wxWidgets_USE_FILE})
